# CT-PCD-GUI

./: DicomViewerWidget.py  DrawingInteractorStyle.py  LesionLibraryDock.py  MainWindow.py  README.md  ROIToolsDock.py  SettingsManager.py  app.py  pyproject.toml  requirements.txt  settings.ini  test.py
.github/workflows/: build-release.yml
src/: __init__.py  app.py  main_window.py
src/docks/: __init__.py  dicom_details.py  lesion_library.py  roi_tools.py
src/interaction/: __init__.py  drawing_interactor_style.py
src/models/: __init__.py  draw_tool.py  roi_manager.py  settings_manager.py
src/widgets/: __init__.py  dicom_viewer.py  lesion_viewer.py
